<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.preference.Preference
        android:key="@string/PREF_HEADER_REFRESH"
        android:title="@string/pref_header_refresh_title" />
    <android.support.v7.preference.Preference
        android:key="@string/PREF_HEADER_DISPLAY"
        android:title="@string/pref_header_display_title" />
    <android.support.v7.preference.Preference
        android:key="@string/PREF_HEADER_COMPONENT"
        android:title="@string/pref_header_component_title" />
    <android.support.v7.preference.Preference
        android:key="@string/PREF_HEADER_ABOUT"
        android:title="@string/pref_header_about_title" />

</android.support.v7.preference.PreferenceScreen>