<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="FALSE"
        android:key="@string/PREF_NOTIFY_TOGGLE"
        android:summary="@string/pref_notify_toggle_summary"
        android:title="@string/pref_notify_toggle_title" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="FALSE"
        android:dependency="@string/PREF_NOTIFY_TOGGLE"
        android:key="@string/PREF_NOTIFY_SOUND"
        android:summary="@string/pref_notify_sound_summary"
        android:title="@string/pref_notify_sound_title" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="FALSE"
        android:key="@string/PREF_APP_WIDGET_TOGGLE"
        android:summary="@string/pref_app_widget_toggle_summary"
        android:title="@string/pref_app_widget_toggle_title" />

</android.support.v7.preference.PreferenceScreen>