<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="FALSE"
        android:key="@string/PREF_DISPLAY_LINK"
        android:summary="@string/pref_display_link_summary"
        android:title="@string/pref_display_link_title" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="FALSE"
        android:disableDependentsState="true"
        android:key="@string/PREF_DISPLAY_ALL"
        android:summary="@string/pref_display_all_summary"
        android:title="@string/pref_display_all_title" />

    <org.qmsos.quakemo.preference.ListPreferenceCustom
        android:defaultValue="@string/default_pref_range_value"
        android:dependency="@string/PREF_DISPLAY_ALL"
        android:dialogTitle="@string/pref_display_range_title"
        android:entries="@array/range_entries"
        android:entryValues="@array/range_values"
        android:key="@string/PREF_DISPLAY_RANGE"
        android:summary="%s"
        android:title="@string/pref_display_range_title" />

</android.support.v7.preference.PreferenceScreen>